Version 1.3.0
  Enhancements:
  - Add support for IMPORT FOREIGN SCHEMA for PostgreSQL 9.5 and higher.
  - Improve cost estimates by using the row count estimate.
    Inspiration by Daniele Sevegnani.

  Bugfixes:
  - The server crashed for the constructs like "<column> = ANY (NULL)".
    Report and patch by dreckard.
  - oracle_fdw sometimes failed to recognize the SDO_GEOMETRY data type.
    Per report from Bevan Jenkins.
  - Some point geometries were not translated properly.
    Per report from Bevan Jenkins.
  - Ignore SDO_GEOMETRY elements with zero SDO_ETYPE.
    According to Oracle, that is the correct behaviour.
    Per report from Bevan Jenkins.
  - Fix EXPLAIN (VERBOSE) for queries containing current_timestamp.
    This caused "ORA-30081: invalid data type for datetime/interval arithmetic".
    Noticed by "kkwhite".

Version 1.2.0, released 2015-01-03
  Enhancements:
  - Add support for a file "srid.map" to translate SRIDs between Oracle
    and PostGIS.
  - If the Oracle session has been terminated outside of a transaction,
    try to reconnect once.
    Idea by AVEN.

  Bugfixes:
  - Prepared statements with parameters can crash.
    Because of custom plans, this does not manifest until the query has been
    executed several times in PostgreSQL 9.2 and higher.
    Per report from Krzysztof Gorczyński and others.
    This bug was introduced in 1.1.0.

Version 1.1.0, released 2014-12-03
  Enhancements:
  - Add efficient support for translating between Oracle SDO_GEOMETRY and
    PostGIS geometry.  Supported geometry types are POINT, LINE, POLYGON,
    MULTIPOINT, MULTILINE and MULTIPOLYGON.
    Courtesy of Oslandia, implemented by Vincent Mora.
  - Add regression tests for improved quality.
  - Bind LOB data instead of LOB locators for INSERT and UPDATE.
    This simplifies the code and makes Oracle triggers on LOB columns
    behave as expected.

  Bugfixes:
  - Fix a bug introduced in 1.0.0 that leads to crashes when LOB columns
    are modified.