@@ -3,6 +3,8 @@ Version 1.3.0
   - Add support for IMPORT FOREIGN SCHEMA for PostgreSQL 9.5 and higher.
   - Improve cost estimates by using the row count estimate.
     Inspiration by Daniele Sevegnani.
+  - Support two-dimensional geometries with an additional measure dimension.
+    Idea by Paul Dziemiela.
 
   Bugfixes:
   - The server crashed for the constructs like "<column> = ANY (NULL)".
